pass --add-opens to JShell remote VM